# gamematch-BE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example.py  gamematching.pyproj  gamematching.slnx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_email_verification.py  003_lol_profile.py  004_queue_entries.py  005_matches.py  006_match_evaluations.py  007_lol_ranking.py  008_schema_alignment.py  009_riot_only_tiers.py  010_realign_queue_tiers.py  011_game_mode_results.py  012_match_quick_messages.py  013_howling_abyss_mode.py  014_fc_online_matching.py
app/: config.py  database.py  main.py
app/api/: auth.py  fc_online.py  match.py  profile.py  ranking.py
app/core/: deps.py  security.py
app/jobs/: __init__.py  maintenance.py
app/models/: __init__.py  email_verification_token.py  fc_online_match_record.py  fc_online_profile.py  lol_profile.py  match.py  match_evaluation.py  match_quick_message.py  queue_entry.py  user.py  user_match_record.py
app/schemas/: __init__.py  auth.py  email.py  fc_online.py  lolprofile.py  match.py  queue.py  ranking.py  user.py
app/services/: email_verification.py  fc_online.py  manner.py  match_results.py  matchmaking.py  ranking.py  riot.py
tests/: conftest.py  test_auth.py  test_fc_online.py  test_game_mode_and_records.py  test_jobs_ranking_concurrency.py  test_match_flow.py  test_riot_profile.py
